--- a/task-manager.html
+++ b/task-manager.html
@@ -66,12 +66,12 @@
     <!-- Fixed Support Information at the Bottom -->
     <section class="support">
         <h3>Need Help?</h3>
-        <button id="supportToggle">Show Support Info</button>
+<!--         <button id="supportToggle">Show Support Info</button>
         <div id="supportInfo" class="support-info" style="display: none;">
             <p>Contact Us: <a href="tel:+09039255792">09039255792</a></p>
             <p>Email: <a href="mailto:anaskabir058@gmail.com">anaskabir058@gmail.com</a></p>
             <p>Social Media: <a href="https://www.facebook.com/anas.kabir" target="_blank">anas.kabir</a></p>
-        </div>
+        </div> -->
     </section>
 
     <script src="scripts.js"></script>
